--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "gh-pages": "^6.2.0",
     "react-router-dom": "^6.24.1",
     "tailwindcss": "^3.4.4"
   }
