--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ashu70640.github.io/Netflix-GPT/",
+  "homepage": "http://ashu70640.github.io/Netflix-GPT/",
   "name": "netflix-gpt",
   "version": "0.1.0",
   "private": true,
